--- a/css/featherlight.gallery.css
+++ b/css/featherlight.gallery.css
@@ -6,12 +6,11 @@
  * MIT Licensed.
 **/
 
-.featherlight-next,
-.featherlight-previous {
+.featherlight-next, .featherlight-previous {
 	display: block;
 	position: absolute;
 	top: 25px;
-	right: 25px;
+	right: 0;
 	bottom: 0;
 	left: 80%;
 	cursor: pointer;
@@ -23,99 +22,109 @@
 	-ms-user-select: none;
 	user-select: none;
 	/* IE9 hack, otherwise navigation doesn't appear */
-	background: rgba(0,0,0,0);
+	background: rgba(0, 0, 0, 0);
 }
 
 .featherlight-previous {
-	left: 25px;
+	/* left: 25px; */
+	left: 0;
 	right: 80%;
 }
 
-.featherlight-next:hover,
-.featherlight-previous:hover {
-	background: rgba(255,255,255,0.25);
+.featherlight-next:hover, .featherlight-previous:hover {
+	/* background: rgba(255, 255, 255, 0.25); */
 }
 
-
-.featherlight-next span,
-.featherlight-previous span {
+.featherlight-next span, .featherlight-previous span {
 	display: none;
 	position: absolute;
-
 	top: 50%;
 	left: 5%;
-	width: 82%;
-
+	width: 25%;
 	/* center horizontally */
 	text-align: center;
-
-	font-size: 80px;
-	line-height: 80px;
-
+	font-size: 50px;
+	line-height: 50px;
 	/* center vertically */
 	margin-top: -40px;
-
 	text-shadow: 0px 0px 5px #fff;
 	color: #fff;
 	font-style: normal;
 	font-weight: normal;
 }
+
 .featherlight-next span {
-	right: 5%;
+	right: 7%;
 	left: auto;
 }
 
-
-.featherlight-next:hover span,
-.featherlight-previous:hover span {
+.featherlight-next:hover span, .featherlight-previous:hover span {
 	display: inline-block;
 }
 
-.featherlight-swipe-aware .featherlight-next,
-.featherlight-swipe-aware .featherlight-previous {
+.featherlight-swipe-aware .featherlight-next, .featherlight-swipe-aware .featherlight-previous {
 	display: none;
 }
 
+/* CUSTOM VARIANT PREVIEW */
+
+.featherlight.cleaner .featherlight-content {
+	padding: 0;
+	border-bottom: 0;
+}
+
+.featherlight.cleaner .featherlight-previous {
+	background: none;
+}
+
+.featherlight.cleaner .featherlight-previous span {
+	text-shadow: none;
+}
+
+.featherlight.cleaner .featherlight-next {
+	background: none;
+}
+
+.featherlight.cleaner .featherlight-next span {
+	text-shadow: none;
+}
+
 /* Hide navigation while loading */
+
 .featherlight-loading .featherlight-previous, .featherlight-loading .featherlight-next {
-	display:none;
+	display: none;
 }
 
 /* Hide navigation in case of single image */
-.featherlight-first-slide.featherlight-last-slide .featherlight-previous,
-.featherlight-first-slide.featherlight-last-slide .featherlight-next {
-	display:none;
+
+.featherlight-first-slide.featherlight-last-slide .featherlight-previous, .featherlight-first-slide.featherlight-last-slide .featherlight-next {
+	display: none;
 }
 
-
 /* Always display arrows on touch devices */
-@media only screen and (max-device-width: 1024px){
-	.featherlight-next:hover,
-	.featherlight-previous:hover {
+
+@media only screen and (max-device-width: 1024px) {
+	.featherlight-next:hover, .featherlight-previous:hover {
 		background: none;
 	}
-	.featherlight-next span,
-	.featherlight-previous span {
+	.featherlight-next span, .featherlight-previous span {
 		display: block;
 	}
 }
 
 /* handling phones and small screens */
+
 @media only screen and (max-width: 1024px) {
-	.featherlight-next,
-	.featherlight-previous {
+	.featherlight-next, .featherlight-previous {
 		top: 10px;
 		right: 10px;
 		left: 85%;
 	}
-
 	.featherlight-previous {
 		left: 10px;
 		right: 85%;
 	}
-
-	.featherlight-next span,
-	.featherlight-previous span {
+	.featherlight-next span, .featherlight-previous span {
 		margin-top: -30px;
 		font-size: 40px;
 	}
