--- a/css/keeki.css
+++ b/css/keeki.css
@@ -169,7 +169,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .full {
-    height: 65vh;
+    /* height: 65vh; */
   }
   .text-headline {
     font-size: 70px;
