--- a/css/keeki.css
+++ b/css/keeki.css
@@ -168,6 +168,9 @@ body {
 /* RESPONSIVE TABLET */
 
 @media screen and (max-width: 768px) {
+  .full {
+    height: 65vh;
+  }
   .text-headline {
     font-size: 70px;
   }
